--- a/config/docker/nginx.conf
+++ b/config/docker/nginx.conf
@@ -17,6 +17,13 @@ http {
     server_name       localhost;
     index             index.html index.htm;
 
+    # Add security headers
+    add_header X-Frame-Options deny always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header Content-Security-Policy "default-src 'none'" always;
+    add_header Referrer-Policy strict-origin-when-cross-origin always;
+
     location / {
       alias            /usr/share/nginx/html/;
 
