--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@types/dompurify": "^2.2.2",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-to-json": "^1.5.3",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^29.5.6",
     "@types/json-pointer": "^1.0.30",
     "@types/lunr": "^2.3.3",
     "@types/mark.js": "^8.11.5",
@@ -83,14 +83,13 @@
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.18.0",
     "@types/yargs": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "beautify-benchmark": "^0.2.4",
     "conventional-changelog-cli": "^3.0.0",
     "copy-webpack-plugin": "^9.0.0",
     "core-js": "^3.13.1",
-    "coveralls": "^3.1.1",
     "css-loader": "^5.2.6",
     "cypress": "^13.1.0",
     "enzyme": "^3.11.0",
@@ -103,11 +102,11 @@
     "fork-ts-checker-webpack-plugin": "^6.2.10",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^7.0.0",
-    "jest": "^27.0.3",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "license-checker": "^25.0.1",
     "lodash.noop": "^3.0.1",
-    "mobx": "^6.3.2",
+    "mobx": "^6.10.2",
     "outdent": "^0.8.0",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.0.0",
@@ -120,10 +119,10 @@
     "size-limit": "^8.2.6",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.0",
-    "ts-jest": "^27.0.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.4",
+    "typescript": "^5.2.2",
     "unfetch": "^4.2.0",
     "url": "^0.11.1",
     "webpack": "^5.88.2",
@@ -140,26 +139,27 @@
     "styled-components": "^4.1.1 || ^5.1.1 || ^6.0.5"
   },
   "dependencies": {
-    "@redocly/openapi-core": "^1.0.0-rc.2",
-    "classnames": "^2.3.1",
+    "@redocly/openapi-core": "^1.4.0",
+    "classnames": "^2.3.2",
     "decko": "^1.2.0",
-    "dompurify": "^2.2.8",
-    "eventemitter3": "^4.0.7",
+    "dompurify": "^3.0.6",
+    "eventemitter3": "^5.0.1",
+    "jest-environment-jsdom": "^29.7.0",
     "json-pointer": "^0.6.2",
     "lunr": "^2.3.9",
     "mark.js": "^8.11.1",
-    "marked": "^4.0.15",
+    "marked": "^4.3.0",
     "mobx-react": "^7.2.0",
     "openapi-sampler": "^1.3.1",
     "path-browserify": "^1.0.1",
     "perfect-scrollbar": "^1.5.5",
-    "polished": "^4.1.3",
-    "prismjs": "^1.27.0",
-    "prop-types": "^15.7.2",
+    "polished": "^4.2.2",
+    "prismjs": "^1.29.0",
+    "prop-types": "^15.8.1",
     "react-tabs": "^4.3.0",
     "slugify": "~1.4.7",
     "stickyfill": "^1.1.1",
-    "swagger2openapi": "^7.0.6",
+    "swagger2openapi": "^7.0.8",
     "url-template": "^2.0.8"
   },
   "size-limit": [
